--- a/src/Components/SignUp/signup.css
+++ b/src/Components/SignUp/signup.css
@@ -99,7 +99,7 @@
 
   .signup_input_btn {
     padding-right: 0px;
-    margin-top: 20px;
+    margin-top: 0px;
     width: 50%;
   }
 
@@ -118,5 +118,9 @@
     letter-spacing: 0.15em;
     margin-bottom: 0px !important;
   }
+  .mb-3 {
+    margin-bottom: 1rem!important;
+    margin-top: 20px !important;
+}
   
 }
